feat: 完善候选人端体验并接入 HR 看板 Offer 统计
- 候选人端：预览匹配、匹配度轮询与排序、简历预览/下载，移除悬浮提示与占位菜单
- 在线简历：项目/证书/工作类型 P1 与完整度算法，补充 SQL 补丁
- 认证：OTP 验证码登录链路（auth + 前端 LoginView）
- HR 看板：analytics 通过 Feign 聚合 Offer 发放量与接受率（P0）
- 更新项目进度文档与相关 schema 脚本